[workspace]
resolver = "2"
members = [
  "crates/*",
  "apps/api-server",
  "apps/desktop/src-tauri"
]

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
rspc = { version = "=0.2.0" }
rspc-axum = { version = "0.1.1", features = ["ws"] }
rspc-tauri = { version = "0.0.1" }
specta = { version = "1", features = ["chrono"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "rspc-0.2.0", features = [
  "specta",
  "rspc",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "rspc-0.2.0", features = [
  "rspc",
  "migrations",
  "sqlite",
], default-features = false }
chrono = "0.4.34"
uuid = { version = "1.8.0", features = ["v4", "v5", "serde"] }
tokio = "1.35"
tokio-util = "0.7.10"
test-log = { version = "0.2.14", features = ["trace"] }
futures = "0.3.30"
serde_json = "1.0"
serde = "1.0"
dotenvy = "0.15.7"
anyhow = "1.0.79"
reqwest = "0.11.24"
qdrant-client = { version = "1.8.0" }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.58"

# image 0.25 got issue see https://github.com/bmrlab/gendam/issues/65
image = "=0.24.9"

# tracing
tracing = "0.1.40"
async-trait = "0.1.77"
downloader = "0.2.7"
# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# Set the default for dependencies, except workspace members.
[profile.dev.package."*"]
opt-level = 3
incremental = false

[patch."https://github.com/Brendonovich/quaint"]
quaint = { path = "./crates/quaint" }
