[workspace]
resolver = "2"
members = [
  "crates/*",
  "apps/api-server",
  "apps/desktop/src-tauri"
]

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
rspc = { version = "=0.2.0" }
rspc-axum = { version = "0.1.1", features = ["ws"] }
rspc-tauri = { version = "0.0.1" }
specta = { version = "1", features = ["chrono"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "rspc-0.2.0", features = [
  "specta",
  "rspc",
  "migrations",
  "sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "rspc-0.2.0", features = [
  "rspc",
  "migrations",
  "sqlite",
], default-features = false }
chrono = "0.4.34"
uuid = { version = "1.8.0", features = ["v4", "v5", "serde"] }
tokio = "1.35"
tokio-util = "0.7.10"
test-log = { version = "0.2.14", features = ["trace"] }
futures = "0.3.30"
serde_json = "1.0"
serde = "1.0"
dotenvy = "0.15.7"
anyhow = "1.0.79"
reqwest = "0.12.5"
qdrant-client = { version = "^1.10.1" } # TODO qdrant-client 0.10 update the API, update it in the future
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0.58"
async-stream = "0.3.5"
syn = { version = "2" }
quote = "1"

# image 0.25 got issue see https://github.com/bmrlab/gendam/issues/65
image = "=0.25.2"
ndarray = { version = "0.15.6" }

# tracing
tracing = "0.1.40"
async-trait = "0.1.77"
async-recursion = "1.1.1"
downloader = "0.2.7"
# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# Set the default for dependencies, except workspace members.
[profile.dev.package."*"]
opt-level = 3
incremental = false
