[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Anonymous"]
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
prisma-lib = { path = "../crates/prisma"}
api-server = { path = "../apps/api-server"}

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [
  "shell-sidecar",
  "shell-execute",
  "process-command-api",
  "fs-all",
] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
test-log = { version = "0.2.14", features = ["trace"] }
ndarray = { version = "0.15.6", features = ["serde"] }
ffmpeg-next = "6.1.1"
tokenizers = "0.15.1"
qdrant-client = "1.7.0"
sha256 = "1.5.0"
image = "0.24.8"
hound = "3.5.1"
uuid = { version = "1.7.0", features = ["v5"] }
whisper-rs = { version = "0.10.0", features = ["coreml"] }
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
half = "2.3.1"
accelerate-src = "0.3.2"
ort = "2.0.0-alpha.4" # this version is recommended by developer
anyhow = "1.0.79"
num-traits = "0.2.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
