[package]
name = "api-server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
prisma-lib = { path = "../../crates/prisma" }
file-handler = { path = "../../crates/file-handler", features = [
  "ffmpeg-binary",
] }
content-library = { path = "../../crates/content-library" }
vector-db = { path = "../../crates/vector-db", features = ["qdrant"] }
rspc = { workspace = true, features = ["axum"] }
specta = { workspace = true }
specta-macros = { version = "=2.0.0-rc.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true, features = ["specta"] }
# prisma-client-rust-cli = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { version = "0.4.1", default-features = false, features = [
  "cors",
  "fs",
] }
axum = "0.6.9" # 为了和 rspc 的 axum feature 保持兼容, 这里只能用 0.6.x, 不能用 0.7.x
rand = "0.8.5"
chrono = "0.4.34"
dirs = "5.0.1"
qdrant-client = { workspace = true }
anyhow = "1"
docx-rs = "0.4"
csv = "1.3.0"

# 处理 enum
strum = "0.26"
strum_macros = "0.26"
