[package]
name = "api-server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
prisma-lib = { path = "../../crates/prisma" }
file-handler = { path = "../../crates/file-handler", features = [
  "ffmpeg-binary",
] }
content-library = { path = "../../crates/content-library" }
vector-db = { path = "../../crates/vector-db", features = ["qdrant"] }
analytics-tracing = { path = "../../crates/analytics-tracing" }
ai = { path = "../../crates/ai" }
rspc = { workspace = true }
rspc-axum = { workspace = true }
specta = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
dotenvy = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.7.4", features = ["ws"] }
tower-http = { version = "0.5.2", default-features = false, features = [
  "cors",
  "fs",
] }
rand = "0.8.5"
chrono = "0.4.34"
dirs = "5.0.1"
blake3 = "1.5.0"
uuid = { workspace = true }
qdrant-client = { workspace = true }
anyhow = "1"
docx-rs = "0.4"
csv = "1.3.0"
test-log = { workspace = true }
priority-queue = "2.0.0"
async-trait = { workspace = true }
downloader = { workspace = true }
reqwest = { workspace = true }


# 处理 enum
strum = "0.26"
strum_macros = "0.26"
thread-priority = "0.16.0"
regex = "1.10.4"
mime_guess = "2.0.4"
