[package]
name = "api-server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
prisma-lib = { path = "../../crates/prisma" }
file-handler = { path = "../../crates/file-handler", features = [
  "ffmpeg-binary",
] }
content-library = { path = "../../crates/content-library" }
vector-db = { path = "../../crates/vector-db", features = ["qdrant"] }
analytics-tracing = { path = "../../crates/analytics-tracing" }
ai = { path = "../../crates/ai" }
p2p = { path = "../../crates/p2p" }
p2p-block = { path = "../../crates/p2p-block" }
cron = { path = "../../crates/cron" }
storage = { path = "../../crates/storage" }
storage-macro = { path = "../../crates/storage-macro" }
global-variable = { path = "../../crates/global-variable" }
rspc = { workspace = true }
rspc-axum = { workspace = true }
specta = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
dotenvy = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.7.4", features = ["ws"] }
tower-http = { version = "0.5.2", default-features = false, features = [
  "cors",
  "fs",
] }
rand = "0.8.5"
chrono = { workspace = true }
dirs = "5.0.1"
blake3 = "1.5.0"
uuid = { workspace = true }
qdrant-client = { workspace = true }
anyhow = { workspace = true }
docx-rs = "0.4"
csv = "1.3.0"
test-log = { workspace = true }
priority-queue = "2.0.0"
async-trait = { workspace = true }
downloader = { workspace = true }
reqwest = { workspace = true }

# 处理 enum
strum = "0.26"
strum_macros = "0.26"

thread-priority = "0.16.0"
regex = "1.10.4"
mime_guess = "2.0.4"
futures.workspace = true
libp2p = "0.53.2"
async-stream = "0.3.5"
walkdir = "2.5.0"
zip = "0.6.6"
infer = "0.15.0"
glob = "0.3.0"

# 处理数据库数据序列化和反序列化
asynchronous-codec = "0.7.0"
quick-protobuf = "0.8.1"
quick-protobuf-codec = "0.3.1"
