[package]
name = "autonat"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
p2p = { path = "../../crates/p2p" }
analytics-tracing = { path = "../../crates/analytics-tracing" }

tokio = { workspace = true, features = ["full"] }
