[package]
name = "ai"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
file-downloader = { path = "../file-downloader" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
test-log = { version = "0.2.14", features = ["trace"] }
ndarray = { version = "0.15.6", features = ["serde"] }
tokenizers = "0.15.1"
sha256 = "1.5.0"
image = "0.24.8"
hound = "3.5.1"
whisper-rs = { version = "0.10.0" }
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
half = "2.3.1"
accelerate-src = "0.3.2"
ort = { version = "2.0.0-alpha.4", features = ["coreml"] }
anyhow = "1.0.79"
num-traits = "0.2.17"
reqwest = "0.11.24"
futures = "0.3.30"
faiss = { workspace = true }
