[package]
name = "ai"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
file-downloader = { path = "../file-downloader" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { workspace = true }
ndarray = { version = "0.15.6", features = ["serde"] }
tokenizers = "0.15.1"
image = "0.24.8"
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
half = "2.3.1"
accelerate-src = "0.3.2"
ort = { version = "2.0.0-alpha.4" }
anyhow = { workspace = true }
num-traits = "0.2.17"
reqwest = "0.11.24"
futures = { workspace = true }
async-trait = "0.1.77"
derivative = "2.2.0"
