[package]
name = "ai"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
file-downloader = { path = "../file-downloader" }
storage = { path = "../storage" }
storage-macro = { path = "../storage-macro" }
global-variable = { path = "../global-variable" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
test-log = { workspace = true }
ndarray = { version = "0.15.6", features = ["serde"] }
tokenizers = "0.19.1"
image = { workspace = true }
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
  "accelerate",
  "metal",
] }
half = "2.3.1"
accelerate-src = "0.3.2"
ort = { version = "2.0.0-rc.4", features = ["coreml"] }
anyhow = { workspace = true }
num-traits = "0.2.17"
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
derivative = "2.2.0"
strum = { workspace = true }
strum_macros = { workspace = true }
rand = "0.8.5"
reqwest-eventsource = "0.6.0"
