[package]
name = "content-base-context"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
test-log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
storage = { path = "../storage" }
storage-macro = { path = "../storage-macro" }
ai = { path = "../ai" }
global-variable = { path = "../global-variable" }
