[package]
name = "content-base"
version = "0.1.0"
edition.workspace = true

[dependencies]
content-base-derive = { path = "../content-base-derive" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
qdrant-client = { workspace = true }
tracing = { workspace = true }
test-log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
storage = { path = "../storage" }
storage-macro = { path = "../storage-macro" }
ai = { path = "../ai" }
global-variable = { path = "../global-variable" }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
file-handler = { path = "../file-handler", features = ["ffmpeg-binary"] }
