[package]
name = "content-base"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
async-recursion = { workspace = true }
anyhow = { workspace = true }
qdrant-client = { workspace = true }
tracing = { workspace = true }
test-log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
storage = { path = "../storage" }
storage-macro = { path = "../storage-macro" }
ai = { path = "../ai" }
global-variable = { path = "../global-variable" }
content-base-context = { path = "../content-base-context" }
content-base-task = { path = "../content-base-task" }
content-base-pool = { path = "../content-base-pool" }
content-handler = { path = "../content-handler" }
content-metadata = { path = "../content-metadata" }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
surrealdb = "2.0.1"
futures = { workspace = true }
futures-util = "0.3.30"
regex = "1.10.6"
itertools = "0.13.0"
fake = { version = "2.9.2", features = ["derive"] }

# for test, remove it in production
dotenvy = { workspace = true }
rand = "0.8.5"
