[package]
name = "content-handler"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
tracing = { workspace = true }
test-log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
storage = { path = "../storage" }
storage-macro = { path = "../storage-macro" }
content-metadata = { path = "../content-metadata" }
global-variable = { path = "../global-variable" }
async-trait = { workspace = true }
ai = { path = "../ai" }
infer = "0.15.0"
byteorder = { version = "1.5.0" }
image = { workspace = true }
phf = { version = "0.11.2" }
