[package]
name = "content-library"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
prisma-lib = { path = "../prisma" }
vector-db = { path = "../vector-db", features = ["qdrant"] }
p2p = { path = "../p2p" }

tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
qdrant-client = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5.0"
zip = "1.1.2"
