[package]
name = "content-library"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
prisma-client-rust = { workspace = true }
prisma-lib = { path = "../prisma" }
vector-db = { path = "../vector-db", features = ["qdrant"] }
storage = { path = "../storage" }
global-variable = { path = "../global-variable" }
p2p = { path = "../p2p" }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
qdrant-client = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.5.0"
zip = { version = "2.2.0", default-features = false, features = [
    "aes-crypto",
    "deflate",
    "deflate64",
    "lzma",
    "time",
    "xz",
    "zstd",
] } # 这些 features 就是默认的，除了 bzip2，bzip2 在我的电脑上 build 不过

content-base = { path = "../content-base" }
