[package]
name = "content-metadata"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
specta = { workspace = true, optional = true }

[features]
rspc = ["dep:specta"]
