[package]
name = "file-handler"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
ai = { path = "../ai" }
file-downloader = { path = "../file-downloader" }
content-library = { path = "../content-library" }
llm = { path = "../llm" }
vector-db = { path = "../vector-db" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
test-log = { version = "0.2.14", features = ["trace"] }
ndarray = { version = "0.15.6", features = ["serde"] }
ffmpeg-next = { version = "6.1.1", optional = true }
sha256 = "1.5.0"
anyhow = { workspace = true }
image = "0.24.8"
futures = "0.3.30"
prisma-lib = { path = "../../crates/prisma" }
prisma-client-rust = { workspace = true }

[features]
default = []
ffmpeg-binary = []
ffmpeg-dylib = ["dep:ffmpeg-next"]
ffmpeg-static = ["ffmpeg-dylib", "ffmpeg-next/static"]
