[package]
name = "file-handler"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
ai = { path = "../ai" }
file-downloader = { path = "../file-downloader" }
content-library = { path = "../content-library" }
llm = { path = "../llm", features = ["local"] }
vector-db = { path = "../vector-db", features = ["qdrant"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
test-log = { workspace = true }
ndarray = { version = "0.15.6", features = ["serde"] }
ffmpeg-next = { version = "6.1.1", optional = true }
sha256 = "1.5.0"
anyhow = { workspace = true }
image = { workspace = true }
futures = { workspace = true }
prisma-lib = { path = "../../crates/prisma" }
prisma-client-rust = { workspace = true }
qdrant-client = { workspace = true }
uuid = { version = "1.7.0", features = ["v5"] }

[features]
default = ["ffmpeg-binary"]
ffmpeg-binary = []
ffmpeg-dylib = ["dep:ffmpeg-next"]
ffmpeg-static = ["ffmpeg-dylib", "ffmpeg-next/static"]
