[package]
name = "file-handler"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
ai = { path = "../ai" }
file-downloader = { path = "../file-downloader" }
content-library = { path = "../content-library" }
vector-db = { path = "../vector-db", features = ["qdrant"] }
storage = { path = "../storage" }
storage-macro = { path = "../storage-macro" }
global-variable = { path = "../global-variable" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
test-log = { workspace = true }
ndarray = { version = "0.15.6", features = ["serde"] }
ffmpeg-next = { version = "6.1.1", optional = true }
anyhow = { workspace = true }
image = { workspace = true }
futures = { workspace = true }
prisma-lib = { path = "../../crates/prisma" }
prisma-client-rust = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
async-trait = { workspace = true }
async-recursion = { workspace = true }

[features]
default = ["ffmpeg-binary"]
ffmpeg-binary = []
ffmpeg-dylib = ["dep:ffmpeg-next"]
ffmpeg-static = ["ffmpeg-dylib", "ffmpeg-next/static"]
