[package]
name = "llm"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
file-downloader = { path = "../file-downloader" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
test-log = { version = "0.2.14", features = ["trace"] }
llama_cpp = { git = "https://github.com/edgenai/llama_cpp-rs.git", default-features = false, features = [
  "metal",
] }
anyhow = "1.0.79"
