[package]
name = "llm"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
file-downloader = { path = "../file-downloader" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { version = "0.2.14", features = ["trace"] }
anyhow = { workspace = true }
llama-cpp-2 = { version = "0.1.34" }
