[package]
name = "p2p-block"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "2.1.1"
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "fs"] }
tracing.workspace = true
uuid.workspace = true
