[package]
name = "p2p-metadata"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynchronous-codec = "0.7.0"
either = "1.10.0"
futures.workspace = true
futures-bounded = "0.2.3"
futures-timer = "3.0.3"
libp2p-core = "0.41.2"
libp2p-identity = "0.2.8"
libp2p-swarm = "0.44.1"
lru = "0.12.3"
quick-protobuf = "0.8.1"
quick-protobuf-codec = "0.3.1"
rand = "0.8.5"
smallvec = "1.13.2"
thiserror = "1.0.58"
tracing.workspace = true
void = "1.0.2"
