[package]
name = "prisma-lib"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
prisma-client-rust = { workspace = true }
prisma-client-rust-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
rand = "0.8.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
