[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
async-trait = { workspace = true }
async-recursion = "1.1.1"
serde = { workspace = true }
specta = { workspace = true }

opendal = { version = "0.47.3", features = ["services-fs", "services-s3"] }
bytes = "1.6.0"
