[package]
name = "sync-lib"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-lib = { path = "../prisma" }
p2p-block = { path = "../p2p-block" }

automerge = "0.5.9"
automerge_repo = { version = "0.1.0", features = ["tokio", "axum"] }
autosurgeon = { version = "0.8.3", features = ["uuid"] }
thiserror.workspace = true
tokio = { workspace = true }
futures.workspace = true
uuid.workspace = true
prisma-client-rust.workspace = true
tracing.workspace = true
