[package]
name = "vector-db"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
file-downloader = { path = "../file-downloader", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
test-log = { workspace = true }
ndarray = { version = "0.15.6", features = ["serde"] }
anyhow = { workspace = true }
faiss = { git = "https://github.com/jondot/faiss-rs", optional = true }
serde = { workspace = true, optional = true }
serde_yaml = { version = "0.9.32", optional = true }
reqwest = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true }

[features]
faiss = ["faiss/static"]
qdrant = [
  "serde/derive",
  "dep:serde_yaml",
  "dep:reqwest",
  "dep:file-downloader",
  "dep:qdrant-client",
]
