[package]
name = "vector-db"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
file-downloader = { path = "../file-downloader", optional = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
test-log = { workspace = true }
ndarray = { version = "0.15.6", features = ["serde"] }
anyhow = { workspace = true }
faiss = { git = "https://github.com/jondot/faiss-rs", optional = true }
reqwest = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true }
rustix = { workspace = true, features = ["process"]}
libproc = "0.14.4"

[features]
faiss = ["faiss/static"]
qdrant = ["dep:reqwest", "dep:file-downloader", "dep:qdrant-client"]
