[package]
name = "muse-desktop"
version = "0.1.0"
description = "Muse Desktop Client - A Tauri App"
authors = ["Anonymous"]
default-run = "muse-desktop"
edition = { workspace = true }
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "protocol-all",
  "shell-sidecar",
  "shell-execute",
  "process-command-api",
  "fs-all",
] }
prisma-lib = { path = "../../../crates/prisma"}
file-downloader = { path = "../../../crates/file-downloader"}
file-handler = { path = "../../../crates/file-handler"}
api-server = { path = "../../api-server"}
rspc = { workspace = true, features = ["tauri"] }
specta-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true }
prisma-client-rust-cli = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
qdrant-client = "1.7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
